loop.log
✅ OpenViking server connected (local mode)
🔧 Zep Memory inicializado para agente: dof_agent_1686
📁 Thread ID: thread_dof_agent_1686
👤 User ID: user_dof_agent_1686
DEBUG: Provider Mistral key MISSING.
DEBUG: Provider Nvidia key loaded.
DEBUG: Provider SambaNova key loaded.
DEBUG: Provider OpenRouter key loaded.
DEBUG: Provider MiniMax key loaded.
2026-03-18 23:03:28,380 - DOF-v4 - INFO - ✅ Chat API iniciada en puerto 8002 (PID: 99961)
2026-03-18 23:03:28,380 - DOF-v4 - INFO - 🚀 DOF Intelligent Loop v4 (SOUL + Execute + Memory + Audit)
2026-03-18 23:03:28,380 - DOF-v4 - INFO -    Zep:      ✅
2026-03-18 23:03:28,380 - DOF-v4 - INFO -    Telegram: ✅
2026-03-18 23:03:28,380 - DOF-v4 - INFO -    SOUL:     ✅ agents/synthesis/SOUL_AUTONOMOUS.md
2026-03-18 23:03:28,380 - DOF-v4 - INFO -    Groq:     ✅
2026-03-18 23:03:28,381 - DOF-v4 - INFO -    Days left: 3
ERROR:    [Errno 48] error while attempting to bind on address ('127.0.0.1', 8002): address already in use
2026-03-18 23:03:29,292 - DOF-v4 - INFO -   📡 Telegram Polling Thread Started
2026-03-18 23:03:29,996 - DOF-v4 - INFO - 
============================================================
  DOF v4 — Cycle #181 — 2026-03-19T04:03:29Z — 3d left
============================================================
2026-03-18 23:03:29,996 - DOF-v4 - INFO -   Research: Searching trends and A2A peers for Cycle #181...
2026-03-18 23:03:30,346 - DOF-v4 - INFO -   A2A: registration.json updated with OASF skills.
2026-03-18 23:03:30,635 - DOF-v4 - INFO -   Research ✅ Context updated.
2026-03-18 23:03:31,247 - DOF-v4 - INFO -   Health: ok
2026-03-18 23:03:32,607 - DOF-v4 - INFO -   Attest: HTTP 200 0x34fabca0791a...
2026-03-18 23:03:32,955 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:33,221 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:03:33,221 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:03:35,417 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:03:35,419 - DOF-v4 - INFO -   Reviewer Agent: Validating decision...
2026-03-18 23:03:35,419 - DOF-v4 - INFO -   ✅ Reviewer APPROVED
2026-03-18 23:03:35,419 - DOF-v4 - INFO -   OASF Tag: software/feature-engineering
2026-03-18 23:03:35,419 - DOF-v4 - INFO -   🛡️ Running Cyber-Audit Sentinel Scan...
2026-03-18 23:03:35,422 - DOF-v4 - INFO -   Feature created: agents_that_trust.py (20 bytes)
2026-03-18 23:03:36,051 - DOF-v4 - INFO -   Syntax check: ✅ PASS
2026-03-18 23:03:36,051 - DOF-v4 - INFO -   🏗️ add_feature ejecutada con éxito!
2026-03-18 23:03:36,051 - DOF-v4 - INFO -   Trace generated: trace_cycle_0181.json
2026-03-18 23:03:36,074 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:36,336 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:03:36,336 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:03:46,522 - DOF-v4 - WARNING -   LLM: Nvidia error: HTTPSConnectionPool(host='integrate.api.nvidia.com', port=443): Read timed out. (read timeout=10)
2026-03-18 23:03:46,523 - DOF-v4 - INFO -   LLM: Trying SambaNova (Meta-Llama-3.3-70B-Instruct)...
2026-03-18 23:03:48,827 - DOF-v4 - INFO -   Juan dice: sabes quie soy ?
2026-03-18 23:03:49,147 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:49,729 - DOF-v4 - INFO -   LLM: Success via SambaNova
2026-03-18 23:03:49,731 - DOF-v4 - INFO -   README ✅
2026-03-18 23:03:49,731 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:49,946 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:50,208 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:03:50,208 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:03:50,241 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:50,621 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:03:51,365 - DOF-v4 - INFO -   Conv log ✅
2026-03-18 23:03:52,395 - DOF-v4 - INFO -   Git: OK
2026-03-18 23:03:53,134 - DOF-v4 - INFO -   Telegram ✅
2026-03-18 23:03:53,135 - DOF-v4 - INFO -   ✅ Cycle #181 done. Next in 30min

2026-03-18 23:03:53,335 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:03:53,336 - DOF-v4 - INFO -   Enigma responde: Un misterio interesante. Como Enigma, mi función e...
2026-03-18 23:03:54,326 - DOF-v4 - INFO -   🔍 Validando código antes de Push...
  File "telegram_bot_completo.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
2026-03-18 23:03:54,412 - DOF-v4 - ERROR -   ❌ Fallo en validación de sintaxis. Cancelando Push.
2026-03-18 23:04:11,676 - DOF-v4 - INFO -   Juan dice: soy juan quiceno me conoces ?
2026-03-18 23:04:11,975 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:04:12,242 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:04:12,243 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:04:12,918 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:04:13,194 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:04:13,480 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:04:13,480 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:04:17,724 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:04:17,726 - DOF-v4 - INFO -   Enigma responde: **Hola Juan Quiceno**

Sí, te conozco. Eres mi cre...
2026-03-18 23:04:18,711 - DOF-v4 - INFO -   🔍 Validando código antes de Push...
  File "telegram_bot_completo.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
2026-03-18 23:04:18,796 - DOF-v4 - ERROR -   ❌ Fallo en validación de sintaxis. Cancelando Push.
2026-03-18 23:33:53,142 - DOF-v4 - INFO - 
============================================================
  DOF v4 — Cycle #182 — 2026-03-19T04:33:53Z — 3d left
============================================================
2026-03-18 23:33:53,142 - DOF-v4 - INFO -   Research: Searching trends and A2A peers for Cycle #182...
2026-03-18 23:33:53,671 - DOF-v4 - INFO -   A2A: registration.json updated with OASF skills.
2026-03-18 23:33:54,968 - DOF-v4 - INFO -   Research ✅ Context updated.
2026-03-18 23:33:55,477 - DOF-v4 - INFO -   Health: ok
2026-03-18 23:33:56,005 - DOF-v4 - INFO -   Attest: HTTP 200 0x2d671d688fef...
2026-03-18 23:33:56,708 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:33:57,669 - DOF-v4 - INFO -   Reviewer Agent: Validating decision...
2026-03-18 23:33:57,669 - DOF-v4 - INFO -   ✅ Reviewer APPROVED
2026-03-18 23:33:57,669 - DOF-v4 - INFO -   OASF Tag: software/feature-engineering
2026-03-18 23:33:57,670 - DOF-v4 - INFO -   🛡️ Running Cyber-Audit Sentinel Scan...
2026-03-18 23:33:57,671 - DOF-v4 - INFO -   Feature created: trust_patterns.md (43 bytes)
2026-03-18 23:33:57,951 - DOF-v4 - INFO -   🏗️ add_feature ejecutada con éxito!
2026-03-18 23:33:57,952 - DOF-v4 - INFO -   Trace generated: trace_cycle_0182.json
2026-03-18 23:33:57,975 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:34:00,846 - DOF-v4 - INFO -   README ✅
2026-03-18 23:34:00,846 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:34:01,089 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:34:01,089 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:34:05,403 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:34:05,406 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:34:05,671 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:34:05,671 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:34:09,621 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:34:09,623 - DOF-v4 - INFO -   LLM: Calling Groq (llama-3.3-70b-versatile)...
2026-03-18 23:34:09,895 - DOF-v4 - WARNING -   LLM: Groq Rate Limit (429). Switching to fallbacks...
2026-03-18 23:34:09,896 - DOF-v4 - INFO -   LLM: Trying Nvidia (meta/llama-3.3-70b-instruct)...
2026-03-18 23:34:10,467 - DOF-v4 - INFO -   LLM: Success via Nvidia
2026-03-18 23:34:10,757 - DOF-v4 - INFO -   Conv log ✅
